src/components/hero/hero.scss
.hero {
      animation-fill-mode: both;
    animation-duration: 1000ms;
    animation-delay: 0ms;
    animation-iteration-count: 1;
    opacity: 1;
    animation-name: react-reveal-836659534729542-1;


  display: flex;
  position: relative;
  margin: 0 (-$body-padding-small) 32px;
  max-height: 720px;
  min-height: 343px;
  @media ($tablet-up) {
    margin: 0 (-$body-padding-medium) 48px;
  }
  @media ($desktop-up) {
    height: 55vw;
    margin: 0 (-$body-padding-large) 48px;
  }

  .hero__background-image {
    position: absolute;
    z-index: -1;
    width: 100%;
    height: 100%;
    background: $color-hero-filter;
    background-size: cover;
    background-blend-mode: soft-light;
  }

  .hero__content-container {
    display: flex;
    flex-direction: column;
    max-width: 1400px;
    width: 100%;
    padding: 32px;
    margin: auto;
  }

  svg {
    margin: 64px auto 32px;
  }

  .hero__title {
    background: -webkit-linear-gradient($color-tertiary, #03475f);
    background-clip: text;
    -webkit-text-fill-color: transparent;
    font-size: calc(1rem + ((1vw - .01px) * 4));
  }
}

